Alert personalizado-Manutencao

--- a/style.css
+++ b/style.css
@@ -692,3 +692,17 @@ section {
         display: none;
     }
 }
+
+/* ALERTA PERSONALIZADO MANUTENÇÃO */
+/* Estilo do botão verde */
+.swal2-confirm.green-button {
+    background-color: var(--primary-color); /* Cor de fundo verde */
+    color: white; /* Cor do texto branco */
+    border: none; /* Remove a borda */
+  }
+  
+  /* Estilo do botão verde quando está em foco */
+  .swal2-confirm.green-button:focus {
+    box-shadow: 0 0 0 0.2rem rgba(76, 175, 80, 0.5); /* Adiciona uma sombra verde quando o botão está em foco */
+  }
+  
