--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 999 !important;
   padding: 30px 100px;
   transition: 0.3s;
 }
