--- a/style.css
+++ b/style.css
@@ -993,12 +993,6 @@ section#food-menu-section {
   transition: 0.3s ease-in-out;
 }
 
-.food-item:hover img,
-.swiper-slide:hover img {
-  transform: scale(1.1);
-  filter: drop-shadow(0px 10px 10px #00000030);
-}
-
 .item-info {
   height: 20%;
   display: flex;
@@ -1018,9 +1012,7 @@ section#food-menu-section {
 }
 
 .food-item:hover h3,
-.food-item:hover span,
-.swiper-slide:hover h3,
-.swiper-slide:hover span {
+.food-item:hover span {
   color: var(--background-color);
 }
 
@@ -1855,6 +1847,12 @@ section#food-menu-section {
   }
 }
 
+@media all and (max-width: 640px) {
+  .item-info h3 {
+    font-size: 0.89rem !important;
+  }
+}
+
 @media all and (max-width: 550px) {
   .swiper-slide {
     height: 220px !important;
@@ -1873,13 +1871,9 @@ section#food-menu-section {
     align-items: center;
   }
 
-  .swiper-slide .item-info h3 {
-    font-size: 1rem;
-    margin: 0px;
-  }
 
   .swiper-slide .item-info span {
-    font-size: 1rem;
+    font-size: 0.1rem;
     margin-top: 0px !important;
   }
 
@@ -1981,6 +1975,10 @@ section#food-menu-section {
     text-align: left;
   }
 
+  .item-info h3 {
+    font-size: 0.6rem !important;
+  }
+
   .boxCategory {
     margin-left: 55px !important;
   }
@@ -2053,6 +2051,7 @@ section#food-menu-section {
   .item-img {
     height: 100px !important;
   }
+  
 }
 
 @media all and (max-width: 360px) {
@@ -2065,6 +2064,10 @@ section#food-menu-section {
   .food-item-wrap {
     gap: 20px;
     grid-template-columns: 1fr !important;
+  }
+
+  .item-info h3 {
+    font-size: 0.8rem !important;
   }
 
   .item-info {
