--- a/pages/login.css
+++ b/pages/login.css
@@ -240,6 +240,10 @@ body {
   text-transform: none !important;
 }
 
+.loginQuickHint {
+  display: none !important;
+}
+
 .social-media {
   display: flex;
   gap: 20px;
@@ -492,6 +496,30 @@ input[type="submit"] {
   background-color: #f5fff7;
 }
 
+@media all and (min-width: 821px) and (max-width: 1100px) {
+  .userConfig {
+    width: 132px;
+    right: 52px !important;
+  }
+
+  .userConfig h2 {
+    width: 108px !important;
+    margin-left: 44px !important;
+    padding-left: 10px;
+    font-size: 0.72rem;
+    line-height: 1.05;
+  }
+
+  .buttonConfigUser {
+    width: 36px;
+    height: 36px;
+  }
+
+  .buttonConfigUser p {
+    font-size: 1.15rem;
+  }
+}
+
 @media all and (max-width: 1020px) {
   body {
     background-color: var(--background-color);
@@ -547,7 +575,7 @@ input[type="submit"] {
   }
 }
 
-@media all and (max-width: 958px) {
+@media all and (max-width: 820px) {
   .userConfig {
     width: 40px !important;
     right: 50px !important;
@@ -567,13 +595,12 @@ input[type="submit"] {
     left: 50px !important;
     top: 50px;
   }
-}
 
-@media all and (max-width: 820px) {
   .buttons {
     left: 100px !important;
     top: 50px;
     box-shadow: 0px 10px 20px 0px #00000010;
+    display: none !important;
   }
 
   .userConfig {
