--- a/style.css
+++ b/style.css
@@ -1556,6 +1556,35 @@ section#food-menu-section {
   }
 }
 
+@media all and (min-width: 821px) and (max-width: 1100px) {
+  .nav,
+  .menu-scroll {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+
+  .logo img {
+    width: 64px;
+  }
+
+  .logo h2 {
+    font-size: 1.35rem;
+    margin-left: 6px;
+    max-width: 165px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .menu-wrap ul {
+    gap: 12px;
+  }
+
+  .menu-wrap ul li a {
+    font-size: 0.95rem;
+  }
+}
+
 @media all and (max-width: 958px) {
   .nav,
   .menu-scroll {
@@ -1564,7 +1593,14 @@ section#food-menu-section {
   }
 
   .logo img {
-    width: 58px;
+    width: 62px;
+  }
+
+  .logo h2 {
+    display: block;
+    font-size: 1.25rem;
+    margin-left: 8px;
+    white-space: nowrap;
   }
 
   .menu-wrap ul {
@@ -1582,7 +1618,7 @@ section#food-menu-section {
   }
 }
 
-@media all and (max-width: 1036px) {
+@media all and (min-width: 959px) and (max-width: 1036px) {
   header {
     padding-left: 50px !important;
     padding-right: 50px !important;
@@ -1598,7 +1634,7 @@ section#food-menu-section {
   }
 }
 
-@media all and (max-width: 1072px) {
+@media all and (max-width: 700px) {
   .bannerInitial figure div {
     display: none;
   }
@@ -1692,7 +1728,17 @@ section#food-menu-section {
   }
 
   .logo img {
-    width: 50px;
+    width: 58px;
+  }
+
+  .logo h2 {
+    display: block;
+    font-size: 1rem;
+    margin-left: 5px;
+    max-width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .btnCart {
@@ -1710,7 +1756,7 @@ section#food-menu-section {
     width: 100%;
     height: 100vh;
     position: fixed !important;
-    top: 64px !important;
+    top: 68px !important;
     right: 0px;
     background-color: #00000090;
     backdrop-filter: blur(10px);
